--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
         <tr>
             <td>Camiseta</td>
-            <td>Preta</td>  
+            <td>Vermelha</td>  
             <td>M</td>   
             <td>R$ 70,00</td>   
             <td>Em estoque</td>
         </tr>
         <tr>
-            <td>Calça</td>
+            <td>Calça Jeans</td>
             <td>Azul</td>  
             <td>p</td>   
             <td>R$ 160,00</td>   
